# solana-game-examples

grin-games/: Anchor.toml
grin-games/program/: .gitignore  Anchor.toml  package.json  tsconfig.json
grin-games/program/programs/grin-games/: Cargo.toml
grin-games/program/programs/grin-games/src/: lib.rs
grin-games/program/tests/: grin-games.ts
grin-games/programs/my-project/src/: lib.rs
